<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Made By Shivam Chopra ( www.droidacid.com ) -->

    <string name="app_name">Aptitude Cracker</string>
    <string name="action_settings">Settings</string>
    <string name="apticalc">Aptitude Calculator</string>
    <string name="formulas">Important Formulas</string>
    <string name="timenwork">Time &amp; Work</string>
    <string name="timendist">Time &amp; Distance</string>
    <string name="profitnloss">Profit &amp; Loss</string>
    <string name="simpleint">Simple Interest</string>
    <string name="compoundint">Compound Interest</string>
    <string name="percent">Percent</string>
    <string name="averages">Averages</string>
    <string name="numsys">Number System</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="num1hint">Enter the first number</string>
    <string name="num2hint">Enter the second number</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="mod">Remainder</string>
    <string name="enterNumerator">Enter the numerator</string>
    <string name="enterDenominator">Enter the denominator</string>
    <string name="calcPercent">Calculate Percentage</string>
    <string name="aptitimenwork">Total WorkDone</string>
    <string name="timefirstperson">Time taken by 1st person</string>
    <string name="timesecondperson">Time taken by 2nd person</string>
    <string name="timethirdperson">Time taken by 3rd person</string>
    <string name="twopersons">2 Persons</string>
    <string name="threepersons">3 Persons</string>
    <string name="tipsntricks">Tips &amp; Tricks</string>
    <string name="testyourskills">Test Your \nSkills</string>
    <string name="about">About This App</string>
    <string name="RbTime">Time</string>
    <string name="RbDistance">Distance</string>
    <string name="RbSpeed">Speed</string>
    <string name="enterDistance">Enter the distance in km</string>
    <string name="enterSpeed">Enter the speed in km/hr</string>
    <string name="enterTime">Enter the time in hr</string>
    <string name="calc">Calculate</string>
    <string name="Et1stnum">Enter the first number</string>
    <string name="Et2ndnum">Enter the second number</string>
    <string name="Et3rdnum">Enter the third number</string>
    <string name="BLcmHcf"><![CDATA[LCM & HCF]]></string>
    <string name="LCM">LCM</string>
    <string name="HFC">HCF</string>
    <string name="percentValue">Enter the number</string>
    <string name="enterPercent">Percentage without \'%\' sign</string>
    <string name="TVpercentValue">Calculate the % value of a number</string>
    <string name="perValue">Calculate Value</string>
    <string name="aptiInterest">Interest</string>
    <string name="EnterPrincipal">Enter the principal</string>
    <string name="enterRate">Enter the rate</string>
    <string name="entertime">Enter the time</string>

    <!-- Another Code -->

    <string name="area_of_circle">Area of circle</string>
    <string name="squares_cubes_and_fractions">Squares, Cubes and Fractions</string>
    <string name="divisibility_rule">Divisibility Rule</string>
    <string name="exponents_rule">Exponents Rule</string>
    <string name="logarithms">Logarithms</string>
    <string name="progressions">Progressions</string>
    <string name="quadratic_equations">Quadratic Equations</string>
    <string name="probability_p_and_c">Probability, P and C</string>
    <string name="geometry">Geometry</string>
    <string name="co_ordinate_geometry">Co-ordinate Geometry</string>
    <string name="trigonometry">Trigonometry</string>
    <string name="squares">Squares</string>
    <string name="cubes">Cubes</string>
    <string name="decimal_percent_and_fractions">Decimal, Percent and Fractions</string>
    <string name="table_of_squares">Table of Squares</string>
    <string name="number">Number</string>
    <string name="square">Square</string>
    <string name="percentages_fractions_and_decimal">Percentages, Fractions and Decimal</string>
    <string name="fractions">Fractions</string>
    <string name="decimals">Decimals</string>
    <string name="table_of_cubes">Table of Cubes</string>
    <string name="cube">Cube</string>
    <string name="rule">Rule</string>
    <string name="divisibility_eg">For the number 7:- \nTake the last digit in a number. Double and subtract the last digit in your number from the rest of the digits. Repeat the process for larger numbers. Example: 357 (Double the 7 to get 14. Subtract 14 from 35 to get 21 which is divisible by 7 and we can now say that 357 is divisible by 7.)</string>
    <string name="probability">Probability</string>
    <string name="binomial_theoram">Binomial Theoram</string>
    <string name="counting_methods">Counting Methods</string>
    <string name="counting">Counting</string>
    <string name="binomial">Binomial</string>
    <string name="geometry_fundamentals">Geometry Fundamentals</string>
    <string name="areas_and_perimeters">Areas and Perimeters</string>
    <string name="volumes_and_surface_areas">Volumes and Surface Areas</string>
    <string name="circle_properties">Circle Properties</string>
    <string name="triangle_properties">Triangle Properties</string>
    <string name="quadrilateral_properties">Quadrilateral Properties</string>
    <string name="pentagon_properties">Pentagon Properties</string>
    <string name="geometry_fundamentals_i">Geometry Fundamentals I</string>
    <string name="geometry_fundamentals_ii">Geometry Fundamentals II</string>
    <string name="geometry_fundamentals_iii">Geometry Fundamentals III</string>
    <string name="geometry_fundamentals_iv">Geometry Fundamentals IV</string>
    <string name="geometry_fundamentals_v">Geometry Fundamentals V</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="equilateral_triangle">Equilateral Triangle</string>
    <string name="rectangle">Rectangle</string>
    <string name="parallelogram">Parallelogram</string>
    <string name="ring">Ring</string>
    <string name="sector">Sector</string>
    <string name="trapezoid">Trapezoid</string>
    <string name="circle_property_1">Circle Property 1</string>
    <string name="circle_property_2">Circle Property 2</string>
    <string name="circle_property_3">Circle Property 3</string>
    <string name="circle_property_4">Circle Property 4</string>
    <string name="circle_property_5">Circle Property 5</string>
    <string name="polygons">Polygons</string>
    <string name="triangle_property_1">Triangle Property 1</string>
    <string name="triangle_property_2">Triangle Property 2</string>
    <string name="triangle_property_3">Triangle Property 3</string>
    <string name="triangle_property_4">Triangle Property 4</string>
    <string name="triangle_property_5">Triangle Property 5</string>
    <string name="triangle_property_6">Triangle Property 6</string>
    <string name="triangle_property_7">Triangle Property 7</string>
    <string name="triangle_property_8">Triangle Property 8</string>
    <string name="triangle_property_9">Triangle Property 9</string>
    <string name="cone">Cone</string>
    <string name="cylinder">Cylinder</string>
    <string name="frustrum">Frustrum</string>
    <string name="pyramid">Pyramid</string>
    <string name="sphere">Sphere</string>
    <string name="line_equation">Line Equation</string>
    <string name="line_distance">Line Distance</string>
    <string name="line_midpoint">Line Midpoint</string>
    <string name="line_slope">Line Slope</string>
    <string name="slope_parallel_lines">Slope Parallel Lines</string>
    <string name="slope_perpendicular_lines">Slope Perpendicular Lines</string>
    <string name="circle_equation">Circle Equation</string>
    <string name="trigonometry_basics">Trigonometry Basics</string>
    <string name="trigonometry_common_angles">Trigonometry Common Angles</string>
    <string name="trigonometry_periodic_formulas">Trigonometry Periodic Formulas</string>
    <string name="trigonometry_pythagorean">Trigonometry Pythagorean</string>
    <string name="half_angle_formulas_etc">Half Angle Formulas, etc</string>
    
    
    <!-- _______________Test Your Skills___________ -->
    <string name="difficulty_type">Difficulty Type</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="next">Continue</string>
    <string name="high_scores">High Scores</string>
    <string name="test_mental_ability">Test Your Mental Ability &amp; Skills</string>
    <string name="timer_counter">00:00</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="review_this_app_">Review This App!</string>
    <string name="like_us_on_facebook">Like us on Facebook</string>
    <string name="give_suggestions">Give Suggestions</string>
    <string name="about_this_app">About This App!</string>
    <string name="version">Version 1.0</string>
    <string name="aboutUs">Hello friends I am a Computer Science Engineer and this is my first Android App.\nI have worked day and night on this app and hope you guys will like it.\nIf you have to report and bug or have suggestions then please send me an email on \'makewaysforshivam@gmail.com\'.\nIf you have some tricks and want me to add them in my app then shoot an email on the above email address.</string>
    <string name="play_again">Play again!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="subject">Subject</string>
    <string name="location">Location</string>
    <string name="your_reviews_and_suggestions">Your reviews and suggestions</string>
    <string name="send_mail">Send Mail</string>
    <string name="highest_score">Highest Score</string>
    <string name="enter_number">Enter the number</string>
    <string name="factorial">Factorial</string>

</resources>