<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bTriProp1"
                style="@style/ButtonStyle"
                android:layout_marginTop="30dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_1" />

            <Button
                android:id="@+id/bTriProp2"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_2" />

            <Button
                android:id="@+id/bTriProp3"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_3" />

            <Button
                android:id="@+id/bTriProp4"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_4" />

            <Button
                android:id="@+id/bTriProp5"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_5" />

            <Button
                android:id="@+id/bTriProp6"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_6" />

            <Button
                android:id="@+id/bTriProp7"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_7" />

            <Button
                android:id="@+id/bTriProp8"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_8" />

            <Button
                android:id="@+id/bTriProp9"
                style="@style/ButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangle_property_9" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>