<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="20dp" >

    <Button
        android:id="@+id/b_more_Upgrade"
        android:layout_width="fill_parent"
        style="@style/ButtonStyle"
        android:padding="5dp"
        android:visibility="invisible"
        android:text="@string/upgrade_to_pro" />
    
    <Button
        android:id="@+id/b_more_About"
        android:layout_width="fill_parent"
        style="@style/ButtonStyle"
        android:padding="5dp"
        android:text="@string/about_this_app" />

    <Button
        android:id="@+id/b_more_Report"
        android:layout_width="match_parent"
        style="@style/ButtonStyle"
        android:padding="5dp"
        android:text="@string/report_a_bug" />

    <Button
        android:id="@+id/b_more_Review"
        android:layout_width="match_parent"
        style="@style/ButtonStyle"
        android:padding="5dp"
        android:visibility="invisible"
        android:text="@string/rate_this_app" />
    
    <Button
        android:id="@+id/b_more_Suggestions"
        android:layout_width="match_parent"
        style="@style/ButtonStyle"
        android:padding="5dp"
        android:text="@string/give_suggestions" />

    <Button
        android:id="@+id/b_more_LikeUs"
        android:layout_width="match_parent"
        style="@style/ButtonStyle"
        android:padding="5dp"
        android:text="@string/like_us_on_facebook" />

    <TextView
        android:id="@+id/Tv_more_Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>